--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-dom": "19.2.0",
     "react-hook-form": "^7.68.0",
     "react-icons": "^5.5.0",
+    "resend": "^6.5.2",
     "tailwind-merge": "^3.4.0",
     "zod": "^4.1.13"
   },
