--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
     "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-switch": "^1.2.6",
+    "@uploadthing/react": "^7.3.3",
     "bcryptjs": "^3.0.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^17.2.3",
     "drizzle-orm": "^0.45.0",
+    "input-otp": "^1.4.2",
     "lucide-react": "^0.556.0",
     "next": "16.0.7",
     "next-auth": "^5.0.0-beta.30",
@@ -38,6 +40,7 @@
     "react-icons": "^5.5.0",
     "resend": "^6.5.2",
     "tailwind-merge": "^3.4.0",
+    "uploadthing": "^7.7.4",
     "zod": "^4.1.13"
   },
   "devDependencies": {
