--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-hook-form": "^7.68.0",
     "react-icons": "^5.5.0",
     "resend": "^6.5.2",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "uploadthing": "^7.7.4",
     "zod": "^4.1.13"
