--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "drizzle:studio": "drizzle-kit studio --config=drizzle.config.ts"
   },
   "dependencies": {
+    "@algolia/autocomplete-js": "^1.19.4",
     "@auth/drizzle-adapter": "^1.11.1",
     "@hookform/resolvers": "^5.2.2",
     "@neondatabase/serverless": "^1.0.2",
@@ -31,6 +32,7 @@
     "@tiptap/react": "^3.14.0",
     "@tiptap/starter-kit": "^3.14.0",
     "@uploadthing/react": "^7.3.3",
+    "algoliasearch": "^5.46.2",
     "bcryptjs": "^3.0.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
