--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "uploadthing": "^7.7.4",
+    "vaul": "^1.1.2",
     "zod": "^4.1.13",
     "zustand": "^5.0.9"
   },
