--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "@radix-ui/react-switch": "^1.2.6",
     "@radix-ui/react-toggle": "^1.1.10",
     "@radix-ui/react-tooltip": "^1.2.8",
+    "@stripe/react-stripe-js": "^5.4.1",
+    "@stripe/stripe-js": "^8.6.1",
     "@tanstack/react-table": "^8.21.3",
     "@tiptap/extension-placeholder": "^3.14.0",
     "@tiptap/pm": "^3.14.0",
@@ -57,6 +59,7 @@
     "react-icons": "^5.5.0",
     "resend": "^6.5.2",
     "sonner": "^2.0.7",
+    "stripe": "^20.1.1",
     "tailwind-merge": "^3.4.0",
     "uploadthing": "^7.7.4",
     "vaul": "^1.1.2",
