--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "react-dom": "19.2.0",
     "react-hook-form": "^7.68.0",
     "react-icons": "^5.5.0",
+    "recharts": "^3.6.0",
     "resend": "^6.5.2",
     "sonner": "^2.0.7",
     "stripe": "^20.1.1",
