--- a/package.json
+++ b/package.json
@@ -57,6 +57,8 @@
     "react-dom": "19.2.0",
     "react-hook-form": "^7.68.0",
     "react-icons": "^5.5.0",
+    "react-instantsearch": "^7.22.1",
+    "react-instantsearch-nextjs": "^1.0.11",
     "recharts": "^3.6.0",
     "resend": "^6.5.2",
     "sonner": "^2.0.7",
